criação do arquivo index.html e mudanças nos arquivos html

--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
     <header>
       <img id="logo" src="./imagens/logo.jpg" alt="" />
       <ul class="cabecalho">
-        <a href="./home.html"><li>Home</li></a>
+        <a href="./index.html"><li>Home</li></a>
         <a href="./cardapio.html"><li>Cardapio</li></a>
         <a href="./contato.html"><li>Contato</li></a>
       </ul>
