--- a/cardapio.html
+++ b/cardapio.html
@@ -102,5 +102,6 @@
     <footer id="footerCardapio">
       <h4>Desenvolvido por Julio Moura © Alguns Direitos Reservados.</h3>
     </footer>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
