--- a/index.html
+++ b/index.html
@@ -33,13 +33,9 @@
     <section class="tituloSecao">
       <div>
         <h2>Beneficios</h2>
-        <p class="texto">Comida sem balança. <br> Com direito aos acompanhamentos: <br>
-          <br> Arroz branco, Arroz temperado.
-          <br> Saladas
-          <br> Maionese caseira deliciosa!
-          <br> Macarrão
-          <br> Feijão tropeiro, Feijão caseiro. <br>
-          Purê, Farofa e muito mais!</p>
+        <p class="texto">Comida sem balança. Ambiente limpo e climatizado. Um ótimo Ambiente para se levar a familia
+          ou os amigos de trabalho. 
+        </p>
       </div>   
       <img class="fotoSecao" src="./imagens/pratos.JPG" alt="">
        
@@ -59,5 +55,6 @@
     <footer>
       <h4>Desenvolvido por Julio Moura © Alguns Direitos Reservados.</h3>
     </footer>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
