Alteração de imagens da pagina index.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="texto">Comida regional estilizada, nosso restaurante está pronto para atender você, venha provar o melhor feijão caseiro da região.Venha nos conhecer e saborear nossos deliciosos pratos.</p>
       </div>
       
-      <img class="fotoSecao" src="./imagens/imagemDaSecao.JPG" alt="">
+      <img class="fotoSecao" src="./imagens/sobre.JPG" alt="">
     </section>
 
     <section class="tituloSecao">
@@ -37,7 +37,7 @@
           ou os amigos de trabalho. 
         </p>
       </div>   
-      <img class="fotoSecao" src="./imagens/pratos.JPG" alt="">
+      <img class="fotoSecao" src="./imagens/pratos.jpeg" alt="">
        
     </section>
 
